Remove `MaxPermSize` option from build as it was removed in Java 8
This commit fixes the warning:

```
Java HotSpot(TM) 64-Bit Server VM warning:
ignoring option MaxPermSize=256m; support was removed in 8.0
```